# urls_tracker

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
app/: container.py
app/domain/entities/: visited_url.py
app/infrastructure/adapters/: visited_urls.py
app/infrastructure/db/: engine.py  session.py
app/infrastructure/models/: __init__.py  visited_urls.py
app/presentation/api/: __main__.py  handlers.py  responses.py  schemas.py
app/presentation/api/base/routers/: schemas.py  system.py
app/presentation/api/v1/: factory.py  handlers.py
app/presentation/api/v1/routers/: visited_urls.py
app/presentation/api/v1/schemas/: visited_urls.py
app/settings/: __init__.py  api.py  db.py  server.py
cli/: __main__.py  migrations.py  start.py
linters/: run_tests_linters.sh
migrations/: env.py
migrations/versions/: 2024-03-24_9063f4fb58ee_init.py
run/: docker-compose.yml
tests/app/infrastructure/adapters/: test_visited_urls.py
tests/app/presentation/api/v1/: conftest.py
tests/app/presentation/api/v1/routers/: test_visited_urls.py
utils/settings/: dev.py
